--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.2.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.34.3",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "lucide-react": "^0.575.0",
@@ -17,6 +19,7 @@
     "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "tailwind-merge": "^3.5.0",
     "tailwindcss": "^4.2.0"
   },
   "devDependencies": {
